[package]
name = "router"
version = "1.20.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1"
apollo-parser = "0.2.10"
apollo-router = { git = "https://github.com/apollographql/router", tag = "v1.20.0" }
async-trait = "0.1"
cookie = "0.16"
futures = "0.3"
hex = "0.4"
http = "0.2"
jsonwebkey = { version = "0.3.5", features = ["jwt-convert"] }
jsonwebtoken = "8.1.1"
jwt-simple = "0.11"
moka = "0.9.6"
openssl = "0.10.41"
reqwest = { version= "0.11.11", features = ["json"] }
schemars = { version = "0.8", features = ["url"] }
serde = "1"
serde_json = "1"
strum = { version = "0.24", features = ["derive"] }
strum_macros = "0.24"
tokio = { version = "1", features = ["full"] }
tower = { version = "0.4", features = ["full"] }

[dev-dependencies]
tokio-test = "0.4.2"
